--- a/03-figma/assets/css/style.css
+++ b/03-figma/assets/css/style.css
@@ -1,6 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    /* box-shadow: inset 0 0 1px 1px red; */
 }
 :root {
     --Blac: #070707;
@@ -10,23 +12,27 @@
 }
 body {
     font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    color:  var(--Blac);
+    font-size: 18px;
 }
 img {
     width: 100%;
+    height: 100%;
+    object-fit: contain;
     vertical-align: top;
 }
 .container {
     width: min(90%, 970px);
     margin: 0 auto;
     background: var(--bg-gray);
-    text-align: center;
 }
 .container.Novik {
     width: min(90%, 970px);
     background: #FFF;
     text-align: left;
 }
-.container.Novik h1 {
+h1 {
     padding-top: 12px;
     padding-bottom: 50px;
     font-size: 48px;
@@ -40,7 +46,6 @@ img {
 }
 .main-nav ul {
     list-style: none;
-    text-align: center;
     font-size: 0;
 }
 .main-nav ul li {
@@ -52,16 +57,11 @@ img {
     color: var(--text)
 }
 .container h2 {
-    text-align: center;
     padding-bottom: 50px;
     padding-top: 100px;
     
 }
-.container h2 p {
-    text-align: center;
-}
 .container a {
-    text-align: center;
     color: var(--Blac);
 }
 section {
@@ -70,14 +70,142 @@ section {
 .novik {
     background: #FFF;
 }
-.fashion-store img {
+.fashion.logo{
     padding-bottom: 40px;
 }
-.reebok img {
-    padding-top: 70px;
+.fashion.link {
+    padding-bottom: 70px;
+}
+.reebok.logo {
     padding-bottom: 40px;
 }
-.braun img {
-    padding-top: 70px;
+.reebok.link {
+    padding-bottom: 70px;
+} 
+.braun.logo {
     padding-bottom: 40px;
 }
+.braun.link {
+    padding-bottom: 100px;
+}
+#skills {
+    background:#FFF;
+    padding-top: 100px;
+    padding-bottom: 101px;
+}
+.container.skills{
+    background: #FFF;
+}
+ul {
+    list-style: none;
+}
+.subtitle {
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+.skills-list {
+    font-size: 0;
+}
+.skills-list li {
+    display: inline-block;
+    margin-right: 96.5px;
+    width: 170px;
+    font-size: 14px;
+    vertical-align: top;
+}
+.skills-list li.last {
+    margin-right: 0;
+}
+.skill-logo {
+    width: 80px;
+    aspect-ratio: 1;
+    margin: 0 auto 25px;
+}
+.skill-title {
+    color: #828282;
+    font-weight: 700;
+    letter-spacing: 0.28px;
+    margin-bottom: 60px;
+    padding: 0 30px;
+}
+.skills-list li.last.skill-title {
+    margin-bottom: 80px;
+}
+.skill-rating {
+    font-size: 0;
+}
+.star {
+    display: inline-block;
+    width: 26px;
+    height: 26px;
+    /* margin-right: 10px; */
+    background: url('../img/star-icon.png') 50% 50%/26px auto no-repeat;
+}
+/* .skill-rating .star:last-child {
+    margin-right: 0;
+} */
+.skill-rating .star + .star{
+    margin-left: 10px;
+}
+.star.gray {
+    opacity: .1;
+}
+#text.container {
+    padding-bottom: 100px;
+}
+.title h2 {
+    padding-top: 100px;
+    padding-bottom: 20px;
+}
+.title {
+    margin-bottom: 60px;
+}
+button {
+    display: inline-block;
+    border: 1px solid#000;
+    min-width: 180px;
+    text-align: center;
+    padding: 10px 16px;
+    border-radius: 22px;
+    color: #FFF;
+    background-color: #070707;
+    font-family: 'Open Sans';
+    font-family: 18px;
+    font-weight: 700;
+    letter-spacing: 1.8px;
+    cursor: pointer;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    margin-bottom: 30px;
+    margin-left: 81px;
+    margin-right: 81px;
+}
+button:hover {
+    background-color: #FFF;
+    color: #000;
+}
+.contacts.logo li {
+    display: inline-block;
+    margin-right: 50px;
+    text-align: center;
+    vertical-align: top;
+}
+.contacts.logo.img {
+    width: 40px;
+    aspect-ratio: 1;
+}
+.contacts.logo {
+    margin-bottom: 60px;
+}
+.contacts.logo li.dribble {
+    margin-right: 0;
+}
+.contacts.text { 
+    text-align: center;
+    color: #828282;
+    font-family: 'Open Sans';
+    font-size: 14px;
+    margin-bottom: 100px;
+}
+    
+    
