added 08-our-team style

--- a/08-our-team/assets/css/style.scss
+++ b/08-our-team/assets/css/style.scss
@@ -109,6 +109,6 @@ main {
         background-color: $gold;
     }
     &:active {
-        background-color: orange;
+        background-color: #f8b436;
     }
 }
