added font 06 08 fixed 07

--- a/06-2-weather/assets/css/style.scss
+++ b/06-2-weather/assets/css/style.scss
@@ -14,7 +14,7 @@ $border:#2B81AC;
     box-sizing: border-box;
 }
 body {
-    font-family: 'Lusida', serif;
+    font-family: Lucida, serif;
     background-color: $bg;
     border: 25px solid $border;
     min-height: 100vh;
