--- a/08-our-team/assets/css/style.scss
+++ b/08-our-team/assets/css/style.scss
@@ -144,8 +144,7 @@ main {
         list-style: none;
         
         li a:hover {
-            border-bottom: 2px solid #5a5858;
-            border-radius: 2px;
+            opacity: 0.5;
         }
     }
 }
