added 11-fonts corrected 10-grid 07-produclu style

--- a/07-producly/assets/css/style.scss
+++ b/07-producly/assets/css/style.scss
@@ -234,6 +234,7 @@ button.start:active {
     a {
         text-decoration: none;
         color: #2F281E;
+        line-height: 1.625rem;
         &:hover {
             color: orange;
         }
