--- a/10-grid/assets/css/style.scss
+++ b/10-grid/assets/css/style.scss
@@ -22,29 +22,19 @@
         letter-spacing: 0.1125rem;
     }
 }
-.city {
+.photo-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 370px);
     gap: 30px;
-
-}
-.city:hover .photo:not(:hover) {
-    transition: all 0.2s ease;
-    opacity: 0.7;
+    &:hover .photo:not(:hover) {
+        transition: all 0.2s ease;
+        opacity: 0.7;
+    }
 }
 img {
+    vertical-align: top;
     border-radius: 20px;
 }
-// .el-2 {
-//     grid-column: 2/4;
-// }
-// .el-3 {
-//     grid-column: 1/3;
-// }
-// .el-6 {
-//     grid-column: -1/-3;
-// }
 .colspan {
     grid-column: span 2;
 }
@@ -54,26 +44,6 @@ img {
 .photo-gallery {
     margin-bottom: 120px;
 }
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 370px);
-    gap: 30px;
-    &:hover .photo:not(:hover) {
-        transition: all 0.2s ease;
-        opacity: 0.7;
-    }
-    .el-3 {
-        grid-area: 2/1/4/3;
-    }
-}
-.portrait {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(5, 370px);
-    gap: 30px;
-    &:hover .photo:not(:hover) {
-        transition: all 0.2s ease;
-        opacity: 0.7;
-    }
+.area {
+    grid-area: 2/1/4/3;
 }
