--- a/11-font/assets/css/style.scss
+++ b/11-font/assets/css/style.scss
@@ -11,10 +11,52 @@ body {
     font-size: 1.75rem;
     line-height: 3rem;
     color: #000;
+    background-image: url(../img/bg-picture.svg);
+    background-repeat: no-repeat;
+    background-position: right 0 top 150px;
 }
 .container {
     width: min(90%, 1200px);
-    margin: 0 auto;
+    margin: 150px auto 0;
+    &.colums {
+        display: flex;
+        gap: 30px;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+}
+aside {
+    padding: 10px;
+    width: 365px;
+    height: 442px;
+    position: sticky;
+    top: 150px;
+    margin-bottom: 100px;
+    ul {
+        display: flex;
+        flex-direction: column;
+        gap: 70px;
+        li {
+            display: flex;
+            padding-bottom: 10px;
+            align-items: flex-start;
+            align-self: stretch;
+            border-bottom: 1px solid #bdbdbd;
+            a {
+                display: flex;
+                align-items: flex-start;
+                font-family: 'Francois One';
+                font-size: 2rem;
+                font-weight: 400;
+                line-height: 3rem;
+                letter-spacing: 0.09rem;
+                text-transform: uppercase;
+            }
+        }
+    }
+}
+main {
+    width: calc(100% - 385px);
 }
 ul {
     list-style: none;
@@ -31,9 +73,19 @@ img {
 }
 .header {
     padding: 13px 0;
-    margin-bottom: 70px;
+    // margin-bottom: 70px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(#fff, 0.8);
+    backdrop-filter: blur(3px);
+    z-index: 1;
     .container {
-        height: 54px;
+        margin: 0;
+        width: 1200px;
+        margin: 0 auto;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -44,24 +96,29 @@ img {
     display: flex;
     gap: 50px;
     align-items: center;
+    justify-content: center;
     span a{
         font-family: 'Tourney';
+        font-size: 1.375rem;
+        align-items: flex-start;
     }
     ul {
         display: flex;
         align-items: center;
         gap: 10px;
         font-family: 'Staatliches';
+        font-size: 1.375rem;
         letter-spacing: 0.04125rem;
     }
 }
-h1 {
+h2 {
     font-family: 'Francois One';
     font-weight: 400;
     font-size: 2.25rem;
     letter-spacing: 0.09rem;
     text-transform: uppercase;
 }
+
 main .container {
     display: flex;
     padding-bottom: 90px;
@@ -75,13 +132,28 @@ main .container {
     align-items: flex-start;
     gap: 40px;
     align-self: stretch;
+    margin-bottom: 70px;
     .title {
         display: flex;
         align-items: flex-start;
         gap: 10px;
-        small {
+        position: relative;
+        padding-top: 28px;
+        &::before {
+            content: '';
+            width: 100px;
+            height: 8px;
+            background-color: #000;
+            display: inline-block;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+        sup {
             font-family: 'Farro';
+            font-size: 1.1rem;
             letter-spacing: 0.075rem;
+            line-height: 1rem;
         }
     }
 }
