--- a/11-font/assets/css/style.scss
+++ b/11-font/assets/css/style.scss
@@ -11,13 +11,16 @@ body {
     font-size: 1.75rem;
     line-height: 3rem;
     color: #000;
-    background-image: url(../img/bg-picture.svg);
-    background-repeat: no-repeat;
-    background-position: right 0 top 150px;
+    &.body {
+        background-image: url(../img/bg-picture.svg);
+        background-repeat: no-repeat;
+        background-position: right 0 top 150px;
+        background-attachment: fixed;
+    }
 }
 .container {
     width: min(90%, 1200px);
-    margin: 150px auto 0;
+    margin: 140px auto 0;
     &.colums {
         display: flex;
         gap: 30px;
@@ -55,7 +58,7 @@ aside {
         }
     }
 }
-main {
+.main {
     width: calc(100% - 385px);
 }
 ul {
@@ -119,13 +122,13 @@ h2 {
     text-transform: uppercase;
 }
 
-main .container {
-    display: flex;
-    padding-bottom: 90px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 70px;
-}
+// .main .container {
+//     display: flex;
+//     padding-bottom: 90px;
+//     flex-direction: column;
+//     align-items: flex-start;
+//     gap: 70px;
+// }
 .chapter {
     display: flex;
     flex-direction: column;
@@ -169,4 +172,81 @@ main .container {
 }
 .position {
     background-color: #DADADA;
+}
+main .container {
+    width: min(90%, 1200px);
+    margin: 140px auto 0;
+}
+.title-list {
+    margin-bottom: 40px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 20px;
+    position: relative;
+    width: min(90%, 326px);
+    &::before {
+        content: '';
+        display: inline-block;
+        gap: 20px;
+        width: 100px;
+        height: 8px;
+        background-color: #000;
+        position: absolute;
+        left: 0;
+        top: 20px;
+    }
+    h2 {
+        font-family: 'Roboto Condensed';
+        font-weight: 600;
+        text-transform: none;
+    }
+}
+.logo-lists {
+    padding: 20px 15px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+    border-top: 1px solid #BFBFBF;
+    border-bottom: 1px solid #BFBFBF;
+    .wrapper {
+        width: 270px;
+        height: 180px;
+        transform: rotateX(10deg);
+        perspective: 900px;
+        .inner {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            transition: all 0.8s ease;
+            transform-style: preserve-3d;
+        }
+        .list {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            padding: 30px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: #E6E6E6;
+            border-radius: 8px;
+            position: absolute;
+        }
+        .front {
+            backface-visibility: hidden;
+        }
+        .back {
+            transform: rotateX(180deg);
+            z-index: -1;
+            background-color: #000;
+            backface-visibility: hidden;
+            img {
+                filter: invert(1);
+            }
+        }
+        &:hover .inner{
+            transform: rotateX(180deg);
+        }
+    }
 }
