--- a/10-grid/assets/css/style.scss
+++ b/10-grid/assets/css/style.scss
@@ -10,6 +10,10 @@
     margin: 120px auto;
     
 }
+a {
+    text-decoration: none;
+    color: #4F4F4F;
+}
 .photo-city {
     margin-bottom: 120px;
 }
@@ -37,15 +41,30 @@
         position: relative;
         transition: all 0.2s ease;
         border-radius: 20px;
+        &::before {
+            content: '';
+            display: block;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(0deg, #241F24 0%, rgba(91, 91, 91, 0.45) 34.11%, rgba(187, 186, 192, 0.26) 62.5%);
+            left: 0;
+            bottom: 0;
+            transition: all 0.2s ease;
+            z-index: 1;
+        }
         img {
             transition: all 0.2s ease;
 
         }
         &:hover {
+            &::before {
+                background: linear-gradient(0deg, #241F24 1.04%, rgba(91, 91, 91, 0.26) 6.99%, rgba(187, 186, 192, 0.00) 12.29%);
+            }    
             .icons {
                 transform: translateY(0);
             }
-            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+            box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.50);
             img {
                 scale: 1.1;
                 
@@ -62,6 +81,7 @@
             align-items: center;
             justify-content: space-between;
             transition: all 0.2s ease;
+            z-index: 5;
             .name {
                 font-family: 'Roboto';
                 font-size: 1.25rem;
@@ -78,7 +98,7 @@
 }
 img {
     vertical-align: top;
-    border-radius: 20px;
+    
 }
 .colspan {
     grid-column: span 2;
@@ -103,7 +123,9 @@ img {
     align-items: center;
     justify-content: space-between;
     transition: all 0.2s ease;
+    z-index: 10;
     .icon {
+        font-size: 1.3rem;
         display: flex;
         width: 40px;
         height: 40px;
@@ -112,6 +134,7 @@ img {
         align-items: center;
         background-color: #f9f9f980;
         border-radius: 8px;
+        border-color: transparent;
         color: #4F4F4F;
         cursor: pointer;
         &:hover {
