--- a/12-forms-style/assets/css/style.scss
+++ b/12-forms-style/assets/css/style.scss
@@ -30,7 +30,7 @@ body {
     letter-spacing: -0.0125rem;
 }
 main {
-    padding: 55px 135px;
+    padding: 55px 0;
     background: #F7F7F7;
     height: 100vh;
     background-color: #F7F7F7;
@@ -38,12 +38,16 @@ main {
 
 .container {
     width: min(90%, 1170px);
-    display: flex;
-    align-items: center;
-    gap: 30px;
+    margin: 0 auto;
     background: #F7F7F7;
 }
+main .container {
+    display: flex;
+    gap: 30px;
+}
 form {
+    width: min(90%, 570px);
+    height: 590px;
     background-color: #FFF;
 }
 .img {
@@ -54,8 +58,6 @@ form {
     justify-content: center;
 }
 .forms {
-    width: 570px;
-    height: 590px;
     padding-top: 35px;
     margin: 0 35px;
 }
@@ -80,41 +82,52 @@ h2 {
         width: 100%;
         display: flex;
         flex-direction: column;
-        gap: 7px
-        ;
+        gap: 7px;
         input[type=text] {
             height: 38px;
-            border-radius: 8px;
-            border: 1px solid #545454;
+            border-radius: 6px;
+            border: 1px solid #E4E4E4;
             padding: 7px 10px;
             background-color: #FFF;
             outline: none;
+            font-family: 'Inter';
+            font-size: 0.9375rem;
+            line-height: 1.375rem;
+            color: #545454;
             &:focus {
-                border: 2px solid #007BFF;
+                border: 1px solid #007BFF;
             }
         }
         select {
             height: 38px;
-            border-radius: 8px;
-            border: 1px solid #545454;
+            border-radius: 6px;
+            border: 1px solid #E4E4E4;
             padding: 7px 28px 7px 10px;
             background: #FFF url('../img/arrow.svg') right 5px top 9px no-repeat;
             appearance: none;
-            // outline: none;
-            // &:focus {
-            //     border: 2px solid #007BFF;
-            // }
+            outline: none;
+            font-family: 'Inter';
+            font-size: 0.9375rem;
+            line-height: 1.375rem;
+            color: #545454;
+            &:focus {
+                border-color: #007BFF;
+            }
         }
         input[type=tel] {
             height: 38px;
-            border-radius: 8px;
-            border: 1px solid #545454;
+            border-radius: 6px;
+            border: 1px solid #E4E4E4;
             padding: 7px 10px;
             background-color: #FFF;
-            // outline:;
-            // &:focus {
-            //     border: 2px solid #007BFF;
-            // }
+            outline: none;
+            font-family: 'Inter';
+            font-size: 0.9375rem;
+            line-height: 1.375rem;
+            color: #545454;
+            &:focus {
+                border-color: #007BFF;
+            }
         }
     }
 }
@@ -125,14 +138,18 @@ h2 {
     margin-bottom: 20px;
     input[type=email] {
         height: 38px;
-        border-radius: 8px;
-        border: 1px solid #545454;
+        border-radius: 6px;
+        border: 1px solid #E4E4E4;
         padding: 7px 10px;
         background-color: #FFF;
-        // outline: 0;
-        // &:focus {
-        //     border: 2px solid #007BFF;
-        // }
+        outline: none;
+        font-family: 'Inter';
+        font-size: 0.9375rem;
+        line-height: 1.375rem;
+        color: #545454;
+        &:focus {
+            border-color: #007BFF;
+        }
     }
     .email-text {
         color: #969696;
@@ -157,7 +174,11 @@ h2 {
         input[type=radio] {
             width: 20px;
             height: 20px;
-            position: relative;    
+            position: relative;
+            font-size: 0.9375rem;
+            line-height: 1.375rem;
+            color: #545454;
+            cursor: pointer;    
             &:checked {
                 &::before {
                     content: '';
@@ -172,9 +193,9 @@ h2 {
                 &::after {
                     content: '';
                     position: absolute;
-                    left: 6px;
+                    left: 7px;
                     top: 7px;
-                    width: 8px;
+                    width: 7px;
                     height: 7px;
                     border-radius: 50%;
                     background-color: #FFF;
@@ -188,7 +209,7 @@ h2 {
     height: 38px;
     color: #FFF;
     background-color: #007BFF;
-    border-radius: 8px;
+    border-radius: 6px;
     border-color: transparent;
     text-align: center;
     font-family: 'Roboto';
@@ -198,7 +219,8 @@ h2 {
     letter-spacing: -0.00625rem;
     cursor: pointer;
     &:hover {
-        background-color: #c6c6c6;
+        background-color: #fff;
+        border-color: #007BFF;
         color: #007BFF;
     }
     &:active {
@@ -268,9 +290,11 @@ h2 {
             justify-content: center;
             text-decoration: none;
             background-color: #FFF;
-            border: 1px solid #969696;
+            border: 1px solid #E4E4E4;
             border-radius: 5px;
             color: #969696;
+            font-size: 1rem;
+            cursor: pointer;
             &:active {
                 background-color: #e7e7e7;
                 color: #969696;
@@ -293,12 +317,53 @@ h2 {
     letter-spacing: -0.00625rem;
     cursor: pointer;
     &:hover {
-        background-color: #c6c6c6;
+        background-color: #FFF;
+        border-color: #007BFF;
         color: #007BFF;
     }
     &:active {
         background-color: #ababab;
         color: #007BFF;
+    }
+}
+.wrapper-profile.fl {
+    padding-top: 11px;
+    .file {
+        display: flex;
+        gap: 10px;
+        justify-content: flex-end;
+    }
+    .file-wrapper {
+        position: relative;
+        display: inline-block;
+        height: 30px;
+        border-radius: 6px;
+        border: 1px solid #E4E4E4;
+        padding: 6px 10px;
+        background-color: #FFF;
+        font-size: 0.9375rem;
+        line-height: 1.375rem;
+        color: #545454;
+        &:focus {
+            border-color: #007BFF;
+        }
+        input[type=file] {
+            width: 128px;
+            height: 18px;
+            top: -2px;
+            z-index: 10;
+            opacity: 0;
+        }
+        .file-style {
+            position: absolute;
+            right: 8px;
+            top: 5px;
+            width: 16px;
+            height: 16px;
+            color: #969696;
+            font-size: 1rem;
+            cursor: pointer;
+        }
     }
 }
 .select2-container--default .select2-selection--single {
@@ -309,12 +374,16 @@ h2 {
     background: #FFF url('../img/arrow.svg') right 5px top 9px no-repeat;
     appearance: none;
     outline: none;
+    font-size: 0.9375rem;
+    line-height: 1.375rem;
+    color: #545454;
     &:focus {
-        border: 2px solid #007BFF;
+        border-color: #007BFF;
     }
 }
 .select2-container--default .select2-selection--single .select2-selection__rendered {
     line-height: 25px;
+    font-family: 'Inter';
 }
 .select2-container--default .select2-selection--single .select2-selection__arrow {
     opacity: 0;
