--- a/09-practice/assets/css/style.scss
+++ b/09-practice/assets/css/style.scss
@@ -12,6 +12,15 @@ body {
     color: $primary-color;
     background-color: #F6f6f6;
 }
+.page-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+}
+main {
+    flex-grow: 1;
+}
 ul {
     list-style: none;
 }
@@ -22,6 +31,9 @@ a, button {
 }
 img {
     vertical-align: top;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .container {
     width: min(90%, 1170px);
@@ -64,11 +76,17 @@ img {
     padding: 10px 17px;
     border: 1px solid $primary-color;
     background-color: transparent;
+    svg {
+        display: none;
+    }
     &:hover {
         background-color: $hover-color;
         color: #FFF;
         border-color: $hover-color;
     }
+}
+.hamburger {
+    display: none;
 }
 .biography-section {
     padding: 150px 0;
@@ -102,7 +120,8 @@ img {
 }
 .team {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 30px;
 }
 .item-top:hover .item-soc {
     opacity: 1;
@@ -187,5 +206,50 @@ img {
                 fill: #FFF;
             }
         }
+    }
+}
+@media screen and (max-width: 980px){
+   .header nav {
+    display: none;
+   }
+   .hamburger {
+    display: block;
+   } 
+}
+@media screen and (max-width: 800px) {
+    .biography-section {
+        padding: 50px 0;
+    }
+    .team {
+        flex-wrap: wrap;
+    }
+    .team-itam {
+        width:calc(50% - 15px);
+    }
+}
+@media screen and (max-width: 500px) {
+    .btn {
+        span {
+            display: none;
+        }
+        svg {
+            display: block;
+            path {
+                fill: $primary-color;
+            }
+        }&:hover svg path {
+            fill: #FFF;
+        }
+
+    }
+}
+@media screen and (max-width: 420px) {
+    .team-itam {
+        width: 100%;
+    }
+    .footer .menu {
+        flex-wrap: wrap;
+        gap: 30px;
+        padding: 0 20vw;
     }
 }
