added 07 mobile-menu

--- a/07-producly/assets/css/style.scss
+++ b/07-producly/assets/css/style.scss
@@ -1,3 +1,5 @@
+@import 'hamburger';
+
 * {
     margin: 0;
     padding: 0;
@@ -73,6 +75,13 @@ ul {
     display: flex;
     justify-content: center;
     gap: 32px;
+    &.tel {
+        padding-bottom: 20px;
+        justify-content: space-around;
+        button {
+            padding: 13px 40px;
+        }
+    }    
 }
 .sign button {
     padding: 13px 25px;
@@ -364,6 +373,75 @@ button.start:active {
     }
     &:active {
         background-color: #afafaf;
+    }
+}
+.page-overlay {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(#000, 0.7);
+    z-index: 1000;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.2s ease
+}
+.menu-panel {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 350px;
+    height: 100vh;
+    background-color: #fff;
+    z-index: 1001;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transform: translateX(-100%);
+    transition: all 0.2s ease;
+    .panel-top {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #ededed;
+        .log  {
+            width: 50%;
+            display: inline-block;
+            padding-left: 16px;
+        }
+    }
+    .nav-mobile {
+        a {
+            display: inline-block;
+            width: 100%;
+            padding: 20px 20px;
+            text-decoration: none;
+            color: #2F281E;
+            transition: all 0.2s ease;
+            font-size: 1.2rem;
+            font-family: 'Montserrat', sans-serif;
+            font-feature-settings: 'clig' off, 'liga' off;
+            &:hover {
+                color: #fff;
+                background-color: orange;
+
+            }
+            &:active {
+                color: orange;
+                background-color: lightgray;
+            }
+        }
+    }
+}
+.open-mobile-menu {
+    .page-overlay {
+        opacity: 1;
+        visibility: visible;
+    }
+    .menu-panel {
+        transform: translateX(0);
     }
 }
 @media screen and (max-width:1300px) {
