--- a/14-practice-rwd/assets/css/style.scss
+++ b/14-practice-rwd/assets/css/style.scss
@@ -1,3 +1,5 @@
+$gray-color: #565656;
+
 *, *::before, *::after {
     margin: 0;
     padding: 0;
@@ -20,15 +22,19 @@ a, button {
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'Lato' sans-serif;
     font-size: 1rem;
-    line-height: 1.5;
-    color: #000;
+    line-height: 166%;
+    color: $gray-color;
 }
 
 .container {
-    width: min(90%, 1200px);
+    width: min(90%, 1170px);
     margin: 0 auto;
+}
+
+.rad-hat {
+    font-family: 'Rad Hat Display', sans-serif;
 }
 
 .page-wrapper {
@@ -44,7 +50,71 @@ header {
     left: 0;
     width: 100%;
     z-index: 10;
+    height: 100px;
+    background-color: rgba(#fff, 0.7);
+    backdrop-filter: blur(4px);
+    .container {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .header-right {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 70px;
+    }
+}
+.main-menu ul {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 42px;
+    a {
+        display: inline-block;
+        position: relative;
+        color: #000;
+        font-size: 0.875rem;
+        letter-spacing: 0.2625rem;
+        text-transform: uppercase;
+        text-decoration: none;
+        &::after {
+            content: '';
+            display: inline-block;
+            width: 0;
+            position: absolute;
+            left: 50%;
+            bottom: 0;
+            height: 1px;
+            background-color: #000;
+            transition: all 0.2s ease;
+            transform: translateX(-50%);
+        }
+        &:hover::after {
+            width: calc(100% - 16px);
+        }
+    }
+}
+.search-btn {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
+    border: none;
+    background: none;
+    cursor: pointer;
+    svg {
+        fill: #454545;
+    }
+    &:hover {
+        svg {
+            fill: #000;
+        }
+    }
 }
 main {
     flex-grow: 1;
+    padding-top: 100px;
 }
