--- a/exam-2/assets/css/style.scss
+++ b/exam-2/assets/css/style.scss
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 5 version
+*/
+
 @import 'fonts';
 @import 'hamburger';
 
@@ -134,6 +141,14 @@ main {
                 &:hover::before{
                     background-color: #FFF;
                 }
+                &:focus-visible{
+                    outline: none;
+                    &::before{
+                        outline: none;
+                        background-color: #FFF;
+                    }
+                }
+                
             }
         }
         .icon-header{
@@ -144,6 +159,15 @@ main {
                 -ms-flex-align: center;
                     align-items: center;
             gap: 20px;
+            a:focus-visible{
+                outline: none;
+                .icon{
+                    background-color: #FFF;
+                    path{
+                        fill: #7E5AFF;
+                    }
+                }
+            }
         }
     }
 }
@@ -531,6 +555,11 @@ main {
                             border-color: #7E5AFF;
                             background-color: #7E5AFF;
                         }
+                        &:focus-visible{
+                            outline: none;
+                            background-color: #55B7FF;
+                            border-color: #55B7FF;
+                        }
                     }
                     .link{
                         position: relative;
@@ -555,6 +584,10 @@ main {
                             background-image: url(../img/label.svg);
                             background-repeat: no-repeat;
                             background-position: center;
+                        }
+                        &:focus-visible{
+                            outline: none;
+                            text-decoration: underline;
                         }
                     }
                 }
@@ -790,7 +823,7 @@ main {
                 // -ms-grid-row: 1;
                 // -ms-grid-row-span: 2;
                 // -ms-grid-column: 1;
-                // -ms-grid-column-span: 2;
+                -ms-grid-column-span: 2;
                 grid-area: 1/1/3/3;
             }
             .el{
@@ -872,6 +905,11 @@ main {
             &:active{
                 border-color: #7E5AFF;
                 background-color: #7E5AFF;
+            }
+            &:focus-visible{
+                outline: none;
+                background-color: #55B7FF;
+                border-color: #55B7FF;
             }
         }
     }
@@ -964,6 +1002,15 @@ main {
                     -ms-flex-align: center;
                         align-items: center;
                 gap: 20px;
+                a:focus-visible{
+                    outline: none;
+                    .icon{
+                        background-color: #FFF;
+                        path{
+                            fill: #7E5AFF;
+                        }
+                    }
+                }
             }
         }
         .copiright{
@@ -1056,6 +1103,10 @@ main {
                 }
                 &.ml::before{
                     background-image: url(../img/email.svg);
+                }
+                &:focus-visible{
+                    outline: none;
+                    text-decoration: underline;
                 }
 
             }
@@ -1155,6 +1206,11 @@ main {
                     &:active{
                         border-color: #7E5AFF;
                         background-color: #7E5AFF;
+                    }
+                    &:focus-visible{
+                        outline: none;
+                        background-color: #55B7FF;
+                        border-color: #55B7FF;
                     }
                 }
             }
